only edit current teams in operator screen
don't edit them in standalone screen

--- a/html/components/teams-tab.css
+++ b/html/components/teams-tab.css
@@ -1,11 +1,15 @@
 #Teams { width: 100%; }
-#Teams>tr>td { text-align: center; }
-#Teams>tr.Selection>td { background: #ccc; border-radius: 12px 12px 0px 0px; }
+#Teams>tr>td { text-align: center; vertical-align: top; background: #eee; }
+#Teams>tr:first-of-type>td { border-radius: 12px 12px 0px 0px; }
+#Teams>tr.Selection>td { background: #ccc; }
 #Teams>tr.Selection.NoneSelected>td { border-radius: 12px; }
-#Teams>tr.Team>td { background: #eee; border-radius: 0px 0px 12px 12px; }
+#Teams>tr:last-of-type>td { border-radius: 0px 0px 12px 12px; }
+#Teams>tr:only-of-type>td { border-radius: 12px; }
+
+#Teams .Hide { display: none; }
 
 #Teams table.Team { width: 100%; border-spacing: 0px; }
-#Teams table.Team.Hide { display: none; }
+#Teams table.Team tr.Name>td { background: #ccc; border-radius: 12px 12px 0px 0px; font-size: 200%; font-weight: bold; }
 
 #Teams table.Skaters { width: 100%; border-spacing: 0px; }
 #Teams table.Skaters.Empty tr:last-of-type>th:first-of-type { border-radius: 0px 0px 0px 12px; }
@@ -17,7 +21,7 @@
 #Teams table.Skaters col.RosterNumber { width: 30%; }
 #Teams table.Skaters col.Button { width: 15%; }
 
-#Teams table.Skaters th.Title { font-size: 200%; }
+#Teams table.Skaters th.Title { font-size: 150%; }
 #Teams table.Skaters th#skaterCount { font-size: 100%; font-weight: normal; }
 #Teams table.Skaters button.AddSkater>span { padding-top: 0em; padding-bottom: 0em; }
 #Teams table.Skaters button.RemoveSkater>span { padding-top: 0em; padding-bottom: 0em; }
