--- a/html/components/teams-tab.css
+++ b/html/components/teams-tab.css
@@ -7,16 +7,18 @@
 #Teams>tr:only-of-type>td { border-radius: 12px; }
 
 #Teams .Hide { display: none; }
+#Teams button.Active { background: #3f3; }
 
 #Teams table.Team { width: 100%; border-spacing: 0px; }
 #Teams table.Team tr.Name>td { background: #ccc; border-radius: 12px 12px 0px 0px; font-size: 200%; font-weight: bold; }
+#Teams table.Team tr.Name>td button { font-size: 50%; margin: 2px 5px; }
 
 #Teams table.Skaters { width: 100%; border-spacing: 0px; }
 #Teams table.Skaters.Empty tr:last-of-type>th:first-of-type { border-radius: 0px 0px 0px 12px; }
 #Teams table.Skaters.Empty tr:last-of-type>th:last-of-type { border-radius: 0px 0px 12px 0px; }
 #Teams table.Skaters tr:last-of-type>td:first-of-type { border-radius: 0px 0px 0px 12px; }
 #Teams table.Skaters tr:last-of-type>td:last-of-type { border-radius: 0px 0px 12px 0px; }
-#Teams table.Skaters tbody tr:nth-child(2n) { background: #ccc; }
+#Teams table.Skaters tbody tr:nth-of-type(2n)>td { background: #ddd; }
 #Teams table.Skaters col.Name { width: 50%; }
 #Teams table.Skaters col.RosterNumber { width: 20%; }
 #Teams table.Skaters col.Button { width: 15%; }
@@ -69,7 +71,6 @@
 	div.TeamsRemoveDialog a.Title { font-size: 125%; }
 	div.TeamsRemoveDialog a.Remove { font-size: 150%; }
 	div.TeamsRemoveDialog a.Target { font-weight: bold; font-size: 250%; }
-	div.TeamsRemoveDialog a.Name { }
 	div.TeamsRemoveDialog a.AreYouSure { font-weight: bold; font-size: 300%; }
 	div.TeamsRemoveDialog button.No { float: left; }
 	div.TeamsRemoveDialog button.Yes { float: right; }
