--- a/html/views/overlay/admin/index.css
+++ b/html/views/overlay/admin/index.css
@@ -1,61 +1,42 @@
-body { font-family: Ubuntu, sans-serif;  margin: 0; }
+body { font-family: Ubuntu, sans-serif; margin: 0; } 
 
-label  { font-variant: small-caps; }
+label { font-variant: small-caps; } 
 
-.current { background: red; color: white; }
-#Controls { float: left; width: 10%; }
-#Preview  { float: left; width: 89%; height: 98%; }
-
-
-h2 { margin: 0 0 10px 0; padding: 4px 4px; display: block; border-radius: 6px; text-align: center; }
-
-.ExtraForm { margin: 20px 0; }
-.ExtraForm .in { margin: 6px;  text-align: center; }
+.current { background: red; color: white; } 
+#Controls { float: left; width: 10%; } 
+#Preview { float: left; width: 89%; height: 98%; } 
 
 
+h2 { margin: 0 0 10px 0; padding: 4px 4px; display: block; border-radius: 6px; text-align: center; } 
 
-button, input, select { 
-    outline: none; cursor: pointer; 
-    padding: 8px 8px; border-radius: 8px;
-    font-size: .8em;
-    width: 100%; 
-    color: white; background: #666;
-    margin-bottom: 2px;
-}
-
-input[type="color"] {
-    padding: 0;
-    width: 75%;
-}
-input[type="color"][cleared="true"] + button {
-    background-color: #ff0000;
-}
-button.ClearPrev {
-    padding: 0;
-    width: 20%;
-}
-
-select { display: inline-block; appearance:none; }
-
-button.ToggleSwitch {
-    cursor: pointer; outline: none; 
-    width: 100%;
-    transition: all .5s ease;
-}
+.ExtraForm { margin: 20px 0; } 
+.ExtraForm .in { margin: 6px; text-align: center; } 
 
 
-button.ToggleSwitch	    { border: 0px solid; border-color: #999 #999 #999 #FF0000;    background: #666; border-left-width: 20px;  border-right-width: 0px; text-decoration: none; }
-button.ToggleSwitch.current { border: 0px solid; border-color: #999 #00FF00 #999 #999 ;  background: #666; border-right-width: 20px; border-left-width: 0px; text-decoration: none; }
 
-button.Reverse 		     { border-color: #999 #999 #999 #FF0000; border-left-width: 20px; border-right-width: 0px; }
-button.Reverse.current	    { border-color: #999 #00FF00 #999 #999; border-right-width: 20px; border-left-width: 0px; }
+button, input, select { outline: none; cursor: pointer; padding: 8px 8px; border-radius: 8px; font-size: .8em; width: 100%; color: white; background: #666; margin-bottom: 2px; } 
+
+input[type="color"] { padding: 0; width: 75%; } 
+input[type="color"][cleared="true"] + button { background-color: #ff0000; } 
+button.ClearPrev { padding: 0; width: 20%; } 
+
+select { display: inline-block; appearance:none; } 
+
+button.ToggleSwitch { cursor: pointer; outline: none; width: 100%; transition: all .5s ease; } 
+
+
+button.ToggleSwitch { border: 0px solid; border-color: #999 #999 #999 #FF0000; background: #666; border-left-width: 20px; border-right-width: 0px; text-decoration: none; } 
+button.ToggleSwitch.current { border: 0px solid; border-color: #999 #00FF00 #999 #999; background: #666; border-right-width: 20px; border-left-width: 0px; text-decoration: none; } 
+
+button.Reverse  { border-color: #999 #999 #999 #FF0000; border-left-width: 20px; border-right-width: 0px; } 
+button.Reverse.current { border-color: #999 #00FF00 #999 #999; border-right-width: 20px; border-left-width: 0px; } 
 
 button.Reverse.changed,
-button.Reverse.changed.current { border-color: #999 #999 #999 #ffa500; border-left-width: 20px; border-right-width: 0px; }
+button.Reverse.changed.current { border-color: #999 #999 #999 #ffa500; border-left-width: 20px; border-right-width: 0px; } 
 
-button.Reverse:before			{ content: 'Show [ ]'; }
-button.Reverse.current:before		{ content: 'Hide [ ]'; }
-button.Reverse.changed.current:before	{ content: 'Switch [ ]'; }
+button.Reverse:before { content: 'Show [ ]'; } 
+button.Reverse.current:before { content: 'Hide [ ]'; } 
+button.Reverse.changed.current:before { content: 'Switch [ ]'; } 
 
-h2  { font-variant: small-caps; font-size: 1.2em; }
+h2 { font-variant: small-caps; font-size: 1.2em; } 
 
