--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -1,94 +1,125 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/json/WS.js"></script>
-		<script type="text/javascript" src="/views/common.js"></script>
-	</head>
-	<body>
-		<div class="ConnectionError">Not connected</div>
-		<div class="DisplayPane" id="image"><img class="object"/></div>
-		<div class="DisplayPane" id="video"><video class="object" onended="this.play();"></video></div>
-		<div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
-		<div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
-		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard.CurrentGame" class="JamScore">
-			<div class="Team Team1 Left" sbContext="Team(1)">
-				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
-				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
-				<div class="Score Box AutoFit" sbDisplay="Score"></div>
-				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
-				<div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
-				<div class="DotTimeouts Box">
-					<div class="Dot Timeout1"></div>
-					<div class="Dot Timeout2"></div>
-					<div class="Dot Timeout3"></div>
-				</div>
-				<div class="DotOfficialReviews Box">
-					<div class="Dot OfficialReview1"></div>
-				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer"></div>
-			</div>
+  <head>
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/json/core.js"></script>
+    <script type="text/javascript" src="/json/WS.js"></script>
+    <script type="text/javascript" src="/views/common.js"></script>
+  </head>
+  <body>
+    <div class="ConnectionError">Not connected</div>
+    <div class="DisplayPane" id="image"><img class="object" /></div>
+    <div class="DisplayPane" id="video"><video class="object" onended="this.play();"></video></div>
+    <div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
+    <div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
+    <div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard.CurrentGame" class="JamScore">
+      <div class="Team Team1 Left" sbContext="Team(1)">
+        <div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
+        <div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
+        <div class="Score Box AutoFit" sbDisplay="Score"></div>
+        <div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
+        <div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
+        <div class="DotTimeouts Box">
+          <div class="Dot Timeout1"></div>
+          <div class="Dot Timeout2"></div>
+          <div class="Dot Timeout3"></div>
+        </div>
+        <div class="DotOfficialReviews Box">
+          <div class="Dot OfficialReview1"></div>
+        </div>
+        <div
+          class="ShowInJam Clock Lead AutoFit"
+          sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
+          sbModify="jammer"
+        ></div>
+      </div>
 
-			<div class="Team Team2 Right" sbContext="Team(2)">
-				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
-				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
-				<div class="Score Box AutoFit" sbDisplay="Score"></div>
-				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
-				<div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
-				<div class="DotTimeouts Box">
-					<div class="Dot Timeout1"></div>
-					<div class="Dot Timeout2"></div>
-					<div class="Dot Timeout3"></div>
-				</div>
-				<div class="DotOfficialReviews Box">
-					<div class="Dot OfficialReview1"></div>
-				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer"></div>
-			</div>
+      <div class="Team Team2 Right" sbContext="Team(2)">
+        <div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
+        <div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
+        <div class="Score Box AutoFit" sbDisplay="Score"></div>
+        <div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
+        <div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
+        <div class="DotTimeouts Box">
+          <div class="Dot Timeout1"></div>
+          <div class="Dot Timeout2"></div>
+          <div class="Dot Timeout3"></div>
+        </div>
+        <div class="DotOfficialReviews Box">
+          <div class="Dot OfficialReview1"></div>
+        </div>
+        <div
+          class="ShowInJam Clock Lead AutoFit"
+          sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
+          sbModify="jammer"
+        ></div>
+      </div>
 
-			<!-- Jam In Progress -->
-			<div class="ShowInJam Clock Period Large" sbContext="Clock(Period)">
-				<div class="Box Name FlatDark FlatBottom AutoFit">
-					<span class="Name" sbDisplay="Name"></span> 
-					<span class="Number" sbDisplay="Number"></span>
-				</div>
-				<div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
-			</div>
-			<div class="ShowInJam Clock Jam Large" sbContext="Clock(Jam)">
-				<div class="Box Name FlatDark FlatBottom AutoFit">
-					<span class="Name" sbDisplay="Name"></span> 
-					<span class="Number" sbDisplay="Number"></span>
-				</div>
-				<div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
-			</div>
+      <!-- Jam In Progress -->
+      <div class="ShowInJam Clock Period Large" sbContext="Clock(Period)">
+        <div class="Box Name FlatDark FlatBottom AutoFit">
+          <span class="Name" sbDisplay="Name"></span>
+          <span class="Number" sbDisplay="Number"></span>
+        </div>
+        <div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
+      </div>
+      <div class="ShowInJam Clock Jam Large" sbContext="Clock(Jam)">
+        <div class="Box Name FlatDark FlatBottom AutoFit">
+          <span class="Name" sbDisplay="Name"></span>
+          <span class="Number" sbDisplay="Number"></span>
+        </div>
+        <div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
+      </div>
 
-			<!-- Lineup / Timeout Clocks Running -->
-			<div class="ShowInLineup ShowInTimeout Clock Period Small Time Box AutoFit" sbContext="Clock(Period)" sbDisplay="Time" sbModify="toTime"></div>
-			<div class="ShowInLineup ShowInTimeout Clock Period Small NameNumber Box AutoFit" sbContext="Clock(Period)" sbDisplay="Name,Number" sbModify="toClockInitialNumber"></div>
-			<div class="ShowInLineup ShowInTimeout Clock Jam Small NameNumber Box AutoFit" sbContext="Clock(Jam)" sbDisplay="Name,Number" sbModify="toClockInitialNumber"></div>
-			<div class="ShowInLineup ShowInTimeout Clock Description Small Box AutoFit" sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(1).RetainedOfficialReview, Team(2).Timeouts, Team(2).OfficialReviews, Team(2).RetainedOfficialReview" sbModify="smallDescriptionUpdate"></div>
-			<div class="ShowInLineup Clock Lineup Small Box AutoFit" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
-			<div class="ShowInTimeout Clock Timeout Small Box AutoFit" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
+      <!-- Lineup / Timeout Clocks Running -->
+      <div
+        class="ShowInLineup ShowInTimeout Clock Period Small Time Box AutoFit"
+        sbContext="Clock(Period)"
+        sbDisplay="Time"
+        sbModify="toTime"
+      ></div>
+      <div
+        class="ShowInLineup ShowInTimeout Clock Period Small NameNumber Box AutoFit"
+        sbContext="Clock(Period)"
+        sbDisplay="Name,Number"
+        sbModify="toClockInitialNumber"
+      ></div>
+      <div
+        class="ShowInLineup ShowInTimeout Clock Jam Small NameNumber Box AutoFit"
+        sbContext="Clock(Jam)"
+        sbDisplay="Name,Number"
+        sbModify="toClockInitialNumber"
+      ></div>
+      <div
+        class="ShowInLineup ShowInTimeout Clock Description Small Box AutoFit"
+        sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(1).RetainedOfficialReview, Team(2).Timeouts, Team(2).OfficialReviews, Team(2).RetainedOfficialReview"
+        sbModify="smallDescriptionUpdate"
+      ></div>
+      <div class="ShowInLineup Clock Lineup Small Box AutoFit" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
+      <div class="ShowInTimeout Clock Timeout Small Box AutoFit" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
 
-			<!-- Sponsor Banners -->
-			<div class="ShowInTimeout ShowInLineup Clock" id="SponsorBox">
-				<div class="NextImg">
-					<img src="" style="display: none;" />
-				</div>
-				<div class="CurrentImg">
-					<img src="" style="display: none;" />
-				</div>
-				<div class="FinishedImg">
-					<img src="" style="display: none;" />
-				</div>
-			</div>
+      <!-- Sponsor Banners -->
+      <div class="ShowInTimeout ShowInLineup Clock" id="SponsorBox">
+        <div class="NextImg">
+          <img src="" style="display: none" />
+        </div>
+        <div class="CurrentImg">
+          <img src="" style="display: none" />
+        </div>
+        <div class="FinishedImg">
+          <img src="" style="display: none" />
+        </div>
+      </div>
 
-			<!-- Intermission -->
-			<div class="ShowInIntermission Clock Intermission">
-				<div class="Message Box AutoFit" sbDisplay="/ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rule(Period.Number)" sbModify="intermissionDisplay"></div>
-				<div class="Time Box AutoFit" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
-			</div>
-		</div>
-	</body>
+      <!-- Intermission -->
+      <div class="ShowInIntermission Clock Intermission">
+        <div
+          class="Message Box AutoFit"
+          sbDisplay="/ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rule(Period.Number)"
+          sbModify="intermissionDisplay"
+        ></div>
+        <div class="Time Box AutoFit" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+      </div>
+    </div>
+  </body>
 </html>
